--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1 user-scalable=none" />
+    <meta name="viewport" content="width=device-width, initial-scale=1 user-scalable=no" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700;900&display=swap" rel="stylesheet">
     <title>HOME bookkeeping</title>
   </head>
